Fix: SVG icon height on IE

--- a/src/embed/style.scss
+++ b/src/embed/style.scss
@@ -109,6 +109,10 @@ strong {
 	font-size: 1.6rem;
 }
 
+.icon-external-link {
+	height: auto;
+	max-height: 20px;
+}
 
 
 
